changes to make it work for bigsur

--- a/OC/config.plist
+++ b/OC/config.plist
@@ -1202,7 +1202,7 @@
 			<key>ThirdPartyDrives</key>
 			<false/>
 			<key>XhciPortLimit</key>
-			<false/>
+			<true/>
 		</dict>
 		<key>Scheme</key>
 		<dict>
