fixed mic and audio, still need to fix audio jack issue

--- a/OC/config.plist
+++ b/OC/config.plist
@@ -300,7 +300,7 @@
 			<key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
 			<dict>
 				<key>layout-id</key>
-				<data>BQAAAA==</data>
+				<data>DQAAAA==</data>
 			</dict>
 		</dict>
 		<key>Delete</key>
@@ -1281,7 +1281,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string></string>
+				<string>keepsyms=1</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
