--- a/OC/config.plist
+++ b/OC/config.plist
@@ -290,7 +290,7 @@
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key>AAPL,ig-platform-id</key>
-				<data>AAAbWQ==</data>
+				<data>AAAWWQ==</data>
 				<key>framebuffer-patch-enable	</key>
 				<data>AQAAAA==</data>
 				<key>framebuffer-stolenmem	</key>
@@ -1299,7 +1299,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string></string>
+				<string>igfxrpsc=1</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
